# fraud-detection

./: .env.example  .gitignore  README.md  docker-compose.yml
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/core/: logging.py
