[project]
name = "fraud-api"
version = "0.1.0"
description = "Real-time fraud detection service"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-json-logger",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"
